...
            ),
            label: strings.tabCalendar,
          ),
          BottomNavigationBarItem(
            icon: const Icon(
              CupertinoIcons.plus_app_fill,
              key: ValueKey('tab-channels'),
            ),
            label: strings.tabChannels,
          ),
          BottomNavigationBarItem(
            icon: const Icon(
              CupertinoIcons.creditcard_fill,
...
            ),
            label: strings.tabPlan,
          ),
          BottomNavigationBarItem(
            icon: const Icon(
              CupertinoIcons.settings,
              key: ValueKey('tab-settings'),
            ),
            label: strings.tabSettings,
          ),
        ],
      ),
      tabBuilder: (context, index) {
...
